# reflector

./: Cargo.toml
data/gtk/: pod_list.ui  pod_row.ui  window.ui
src/: application.rs  config.rs  main.rs  pod_list.rs  pod_row.rs  utils.rs  window.rs
src/models/: mod.rs  pod.rs  pod_list.rs
